// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> Checkboxes --- Snapshot +++capturing Snapshot of Checkboxes 1`] = `
<form
  className="dp-pc_form"
  onSubmit={[Function]}
>
  <div
    className="dp-pc_field"
  >
    <div
      description=""
    >
      <div>
        <label
          htmlFor="field_1-first"
        >
          <input
            checked={false}
            id="field_1-first"
            name="checkboxes"
            onChange={[Function]}
            type="checkbox"
            value="first"
          />
           
          First
        </label>
      </div>
      <div>
        <label
          htmlFor="field_1-second"
        >
          <input
            checked={false}
            id="field_1-second"
            name="checkboxes"
            onChange={[Function]}
            type="checkbox"
            value="second"
          />
           
          Second
        </label>
      </div>
      <div>
        <label
          htmlFor="field_1-last"
        >
          <input
            checked={false}
            id="field_1-last"
            name="checkboxes"
            onChange={[Function]}
            type="checkbox"
            value="last"
          />
           
          Last
        </label>
      </div>
    </div>
    <span
      className="indicator"
    />
    <span
      className="dp-pc_description"
    >
      
    </span>
    <label
      className="dp-pc_label"
      htmlFor="field_1"
    >
      
    </label>
  </div>
</form>
`;

exports[`>>> Checkboxes --- Snapshot +++capturing Snapshot of Checkboxes with existing value 1`] = `
<form
  className="dp-pc_form"
  onSubmit={[Function]}
>
  <div
    className="dp-pc_field"
  >
    <div
      description=""
    >
      <div>
        <label
          htmlFor="checkbox-first"
        >
          <input
            checked={true}
            id="checkbox-first"
            name="checkboxes"
            onChange={[Function]}
            type="checkbox"
            value="first"
          />
           
          First
        </label>
      </div>
      <div>
        <label
          htmlFor="checkbox-second"
        >
          <input
            checked={false}
            id="checkbox-second"
            name="checkboxes"
            onChange={[Function]}
            type="checkbox"
            value="second"
          />
           
          Second
        </label>
      </div>
      <div>
        <label
          htmlFor="checkbox-last"
        >
          <input
            checked={false}
            id="checkbox-last"
            name="checkboxes"
            onChange={[Function]}
            type="checkbox"
            value="last"
          />
           
          Last
        </label>
      </div>
    </div>
    <span
      className="indicator"
    />
    <span
      className="dp-pc_description"
    >
      
    </span>
    <label
      className="dp-pc_label"
      htmlFor="checkbox"
    >
      
    </label>
  </div>
</form>
`;
